--- a/ansible_docker/playbook.yml
+++ b/ansible_docker/playbook.yml
@@ -1,6 +1,8 @@
 -
   name: inventory
   hosts: hosts
+  become: yes
+  become_method: sudo
   strategy: free
   any_errors_fatal: true
   vars:
@@ -8,6 +10,7 @@
     db_user: admin
     db_user_password: Passw0rd
   roles:
+  - deploy_docker_container
   - deploy_python
   - deploy_db
   - deploy_web
